# nomad-ppms-plugin

./: .cruft.json  404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml
.github/workflows/: actions.yml
cpfs_ppms/: README.md  schema.py
cpfs_ppms/PPMSdata/: parser.py
cpfs_ppms/PPMSsequence/: parser.py
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/cpfs_ppms/: cpfsppmsdatastruct.py  ppmsdatastruct.py  ppmsfunctions.py  ppmssteps.py
src/cpfs_ppms/parsers/: __init__.py  parser.py
src/cpfs_ppms/schema_packages/: __init__.py  schema_package.py
src/nomad_ppms_plugin/: __init__.py  cpfsppmsdatastruct.py  parser.py  ppmsdatastruct.py  ppmsfunctions.py  schema_package.py
src/nomad_ppms_plugin/parsers/: __init__.py  parser.py
src/nomad_ppms_plugin/schema_packages/: __init__.py  schema_package.py
tests/: test_ppms.py
tests/data/: test.archive.yaml
tests/parsers/: test_parser.py
tests/schema_packages/: test_schema_package.py
tutorial/: tutorial.html
